--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <!-- https://devicon.dev -->
+        <link href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css" rel="stylesheet">
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -125,26 +127,21 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-java"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-python"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-c#"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
+                        <li class="list-inline-item"><i class="devicon-csharp-plain colored"></i></li>
+                        <li class="list-inline-item"><i class="devicon-java-plain colored"></i></li>
+                        <li class="list-inline-item"><i class="devicon-git-plain colored"></i></li>
+                        <li class="list-inline-item"><i class="devicon-html5-plain colored"></i></li>
+                        <li class="list-inline-item"><i class="devicon-css3-plain colored"></i></li>
+                        <li class="list-inline-item"><i class="devicon-python-plain colored"></i></li>
+                        <li class="list-inline-item"><i class="devicon-bash-plain colored"></i></li>
+                        <li class="list-inline-item"><i class="devicon-oracle-original colored"></i></li>
+                        <li class="list-inline-item"><i class="devicon-visualstudio-plain colored"></i></li>
+                        <li class="list-inline-item"><i class="devicon-github-original colored"></i></li>
+                        <li class="list-inline-item"><i class="devicon-linux-plain colored"></i></li>
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
-                        </li>
+
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Agile Development & Scrum
