added description for first portfolio item, assignment_2 webdev

--- a/index.html
+++ b/index.html
@@ -94,12 +94,22 @@
                     <h2 class="mb-5">My Portfolio</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">Computer repair website</h3>
+                            <div class="subheading mb-3">COMP602 - Web Development</div>
+                            <div>
+                                <ul>
+                                    <li>Group project (3 group members) for Web Development module at Wintec.</li>
+                                    <li>HTML, CSS and vanilla JS to build a Computer repair business website.</li>
+                                    <li>We used Git and GitHub to collaborate and keep our code up to date.</li>
+                                    <li>Azure DevOps was used to keep track of user stories and assign tasks</li>
+                                </ul>
+                            </div>
+                            <p>
+                                <a href="https://jtrondy.github.io/Assignment_2/" target="_blank">GitHub pages - Computer Repair</a><br>
+                                <a href="https://github.com/jtrondy/Assignment_2/" target="_blank">GitHub repo</a>
+                            </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Semester 1 - 2022</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -190,8 +200,8 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p class="mb-0">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div>
             </section>
             <hr class="m-0" />
