portfolio image added, testing on mobile

--- a/index.html
+++ b/index.html
@@ -109,7 +109,12 @@
                                 <a href="https://github.com/jtrondy/Assignment_2/" target="_blank">GitHub repo</a>
                             </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Semester 1 - 2022</span></div>
+                        <div class="flex-shrink-0">
+                            <span class="text-primary">Semester 1 - 2022</span><br>
+                            <img src="assets/img/assignment_2-web_dev-home_page.jpeg" width="200" height="175" alt="Home page for computer repair website">
+                        </div>
+
+
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
