portfolio image: zoom-in cursor on hover, click opens full-size image

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Waikato Institute of Technology</h3>
+                            <h3 class="mb-0">Waikato Institute of Technology (Wintec)</h3>
                             <div class="subheading mb-3">Bachelor of Applied Information Technology (Level 7)</div>
                             <div>Software Engineering Specialisation</div>
                         </div>
@@ -73,14 +73,14 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Waikato Institute of Technology</h3>
+                            <h3 class="mb-0">Waikato Institute of Technology (Wintec)</h3>
                             <div class="subheading mb-3">New Zealand Diploma in Information Technology and Technical Support (Level 5)</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">February 2021 - November 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Waikato Institute of Technology</h3>
+                            <h3 class="mb-0">Waikato Institute of Technology (Wintec)</h3>
                             <div class="subheading mb-3">Certificate in Fitness Industry Training (Level 4)</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">February 2015 - November 2015</span></div>
@@ -95,11 +95,11 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Computer repair website</h3>
-                            <div class="subheading mb-3">COMP602 - Web Development</div>
+                            <div class="subheading mb-3">Wintec - COMP602 - Web Development</div>
                             <div>
                                 <ul>
                                     <li>Group project (3 group members) for Web Development module at Wintec.</li>
-                                    <li>HTML, CSS and vanilla JS to build a Computer repair business website.</li>
+                                    <li>HTML, CSS and vanilla JS to build a Computer repair business website from scratch.</li>
                                     <li>We used Git and GitHub to collaborate and keep our code up to date.</li>
                                     <li>Azure DevOps was used to keep track of user stories and assign tasks</li>
                                 </ul>
@@ -111,7 +111,7 @@
                         </div>
                         <div class="flex-shrink-0">
                             <span class="text-primary">Semester 1 - 2022</span><br>
-                            <img src="assets/img/assignment_2-web_dev-home_page.jpeg" width="200" height="175" alt="Home page for computer repair website">
+                            <img class="portfolio-img" src="assets/img/assignment_2-web_dev-home_page.jpeg" onclick="window.open(this.src)" alt="Home page for computer repair website">
                         </div>
 
 
