multithreading portfolio item added, changed width of portfolio images

--- a/index.html
+++ b/index.html
@@ -113,8 +113,6 @@
                             <span class="text-primary">Semester 1 - 2022</span><br>
                             <img class="portfolio-img" src="assets/img/assignment_2-web_dev-home_page.jpeg" onclick="window.open(this.src)" alt="Home page for computer repair website">
                         </div>
-
-
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -126,12 +124,24 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">Multithreading in C#</h3>
+                            <div class="subheading mb-3">Wintec - Comp609 - Application Development</div>
+                            <div>
+                                <ul>
+                                    <li>Console app which finds the maximum number of a large integer array.</li>
+                                    <li>Compares the execution time between a single thread and n threads</li>
+                                    <li>The multithread function takes in a single array, and splits it into n arrays, starts the threads, and finds the maximum number.</li>
+
+                                </ul>
+                            </div>
+                            <p>
+                                <a href="https://github.com/jtrondy/multithreaded-consoleapp">GitHub repo - multithread app</a>
+                            </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0">
+                            <span class="text-primary">Semester 2 - 2022</span><br>
+                            <img class="portfolio-img" src="assets/img/multithreading-comp609.png" onclick="window.open(this.src)" alt="Home page for computer repair website">
+                        </div>
                     </div>
                 </div>
             </section>
