--- a/index.html
+++ b/index.html
@@ -116,11 +116,24 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">Livestock daily profitability calculator</h3>
+                            <div class="subheading mb-3">Wintec - comp609 - Application Development</div>
+                            <div>
+                                <ul>
+                                    <li>Windows forms desktop application which displays the total profitability of livestock per day.</li>
+                                    <li>The intention of this assignment was to demonstrate the OOP principles Inheritance and Polymorphism.</li>
+                                    <li>The other objective was to introduce Hash tables and key value pairs.</li>
+                                </ul>
+                            </div>
+                            <p>
+                                <a href="https://jtrondy.github.io/Assignment_2/" target="_blank">GitHub pages - Computer Repair</a><br>
+                                <a href="https://github.com/jtrondy/Assignment_2/" target="_blank">GitHub repo</a>
+                            </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0">
+                            <span class="text-primary">Semester 2 - 2022</span><br>
+                            <img class="portfolio-img" src="assets/img/profit_calculator-comp609.png" onclick="window.open(this.src)" alt="view of profitability app after performing calculation">
+                        </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
@@ -130,8 +143,7 @@
                                 <ul>
                                     <li>Console app which finds the maximum number of a large integer array.</li>
                                     <li>Compares the execution time between a single thread and n threads</li>
-                                    <li>The multithread function takes in a single array, and splits it into n arrays, starts the threads, and finds the maximum number.</li>
-
+                                    <li>The multithread function takes in a single array, splits it into n arrays, starts the threads, and then finds the maximum number.</li>
                                 </ul>
                             </div>
                             <p>
@@ -140,7 +152,7 @@
                         </div>
                         <div class="flex-shrink-0">
                             <span class="text-primary">Semester 2 - 2022</span><br>
-                            <img class="portfolio-img" src="assets/img/multithreading-comp609.png" onclick="window.open(this.src)" alt="Home page for computer repair website">
+                            <img class="portfolio-img" src="assets/img/multithreading-comp609.png" onclick="window.open(this.src)" alt="console image of execution times for multithreading app">
                         </div>
                     </div>
                 </div>
