quicksort algorithm portfolio item

--- a/index.html
+++ b/index.html
@@ -116,6 +116,21 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Quicksort Animation</h3>
+                            <div class="subheading mb-3">Wintec - COMP605 - Datastructures and Algorithms</div>
+                            <div>
+                                <ul>
+                                    <li>Powerpoint animation displaying the partitioning process of the quicksort algorithm.</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="flex-shrink-0">
+                            <span class="text-primary">Semester 2 - 2022</span><br>
+                            <img class="portfolio-img" src="assets/img/quicksort.gif" onclick="window.open(this.src)" alt="Home page for computer repair website">
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Livestock daily profitability calculator</h3>
                             <div class="subheading mb-3">Wintec - comp609 - Application Development</div>
                             <div>
