updates to quicksort animation description.

--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@
                             <div>
                                 <ul>
                                     <li>Powerpoint animation displaying the partitioning process of the quicksort algorithm.</li>
+                                    <li>In this particular case I am always selecting the first element as the pivot.</li>
+                                    <li><a href="./assets/img/quicksort.gif" target="_blank">Click here</a> to zoom in.</li>
                                 </ul>
                             </div>
                         </div>
@@ -135,14 +137,13 @@
                             <div class="subheading mb-3">Wintec - comp609 - Application Development</div>
                             <div>
                                 <ul>
-                                    <li>Windows forms desktop application which displays the total profitability of livestock per day.</li>
+                                    <li>Windows forms desktop application which calculates the total profitability of livestock per day.</li>
                                     <li>The intention of this assignment was to demonstrate the OOP principles Inheritance and Polymorphism.</li>
                                     <li>The other objective was to introduce Hash tables and key value pairs.</li>
                                 </ul>
                             </div>
                             <p>
-                                <a href="https://jtrondy.github.io/Assignment_2/" target="_blank">GitHub pages - Computer Repair</a><br>
-                                <a href="https://github.com/jtrondy/Assignment_2/" target="_blank">GitHub repo</a>
+                                <a href="#" target="_blank">GitHub repo - Livestock profitability</a>
                             </p>
                         </div>
                         <div class="flex-shrink-0">
@@ -162,7 +163,7 @@
                                 </ul>
                             </div>
                             <p>
-                                <a href="https://github.com/jtrondy/multithreaded-consoleapp">GitHub repo - multithread app</a>
+                                <a href="https://github.com/jtrondy/multithreaded-consoleapp" target="_blank">GitHub repo - multithread app</a>
                             </p>
                         </div>
                         <div class="flex-shrink-0">
