--- a/index.html
+++ b/index.html
@@ -103,11 +103,9 @@
                                     <li>We used Git and GitHub to collaborate and keep our code up to date.</li>
                                     <li>Azure DevOps was used to keep track of user stories and assign tasks</li>
                                 </ul>
+                                <a href="https://jtrondy.github.io/Assignment_2/" target="_blank">View website here - Computer Repair</a><br>
+                                <a href="https://github.com/jtrondy/Assignment_2/" target="_blank">View GitHub repo here - Computer Repair</a>
                             </div>
-                            <p>
-                                <a href="https://jtrondy.github.io/Assignment_2/" target="_blank">GitHub pages - Computer Repair</a><br>
-                                <a href="https://github.com/jtrondy/Assignment_2/" target="_blank">GitHub repo</a>
-                            </p>
                         </div>
                         <div class="flex-shrink-0">
                             <span class="text-primary">Semester 1 - 2022</span><br>
@@ -137,14 +135,12 @@
                             <div class="subheading mb-3">Wintec - comp609 - Application Development</div>
                             <div>
                                 <ul>
-                                    <li>Windows forms desktop application which calculates the total profitability of livestock per day.</li>
+                                    <li>Windows forms C#/.Net6.0 desktop application which calculates the total profitability of livestock per day.</li>
                                     <li>The intention of this assignment was to demonstrate the OOP principles Inheritance and Polymorphism.</li>
                                     <li>The other objective was to introduce Hash tables and key value pairs.</li>
                                 </ul>
+                                <a href="#" target="_blank">View GitHub repo here - Livestock profitability</a>
                             </div>
-                            <p>
-                                <a href="#" target="_blank">GitHub repo - Livestock profitability</a>
-                            </p>
                         </div>
                         <div class="flex-shrink-0">
                             <span class="text-primary">Semester 2 - 2022</span><br>
@@ -161,10 +157,8 @@
                                     <li>Compares the execution time between a single thread and n threads</li>
                                     <li>The multithread function takes in a single array, splits it into n arrays, starts the threads, and then finds the maximum number.</li>
                                 </ul>
+                                <a href="https://github.com/jtrondy/multithreaded-consoleapp" target="_blank">View GitHub repo here - multithread app</a>
                             </div>
-                            <p>
-                                <a href="https://github.com/jtrondy/multithreaded-consoleapp" target="_blank">GitHub repo - multithread app</a>
-                            </p>
                         </div>
                         <div class="flex-shrink-0">
                             <span class="text-primary">Semester 2 - 2022</span><br>
@@ -243,8 +237,13 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    <p class="mb-0">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <ul>
+                        <li class="fab fa-spotify"></li><p class="list-inline-item">&nbsp;Listening to all and any type of music</p><br>
+                        <li class="fab fa-wizards-of-the-coast"></li><p class="list-inline-item">&nbsp;Strategy games - Magic: The Gathering</p><br>
+                        <li class="fas fa-basketball-ball"></li><p class="list-inline-item">&nbsp;Sports</p><br>
+                        <li class="fas fa-smile"></li><p class="list-inline-item">&nbsp;Having a laugh</p><br>
+                        <li class="fas fa-headset"></li><p class="list-inline-item">&nbsp;MMORPGs - World of Warcraft</p>
+                    </ul>
                 </div>
             </section>
             <hr class="m-0" />
