added GitHub repo link to farm livestock app

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                     <li>The intention of this assignment was to demonstrate the OOP principles Inheritance and Polymorphism.</li>
                                     <li>The other objective was to introduce Hash tables and key value pairs.</li>
                                 </ul>
-                                <a href="#" target="_blank">View GitHub repo here - Livestock profitability</a>
+                                <a href="https://github.com/jtrondy/hash-table" target="_blank">View GitHub repo here - Livestock profitability</a>
                             </div>
                         </div>
                         <div class="flex-shrink-0">
