added fullstop to sentence| removed phone number

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <span class="text-primary">Stevenson</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Hamilton, New Zealand · (+64) 27-840-5560 ·
+                        Hamilton, New Zealand ·
                         <a href="mailto:name@email.com">jarste22@student.wintec.ac.nz</a>
                     </div>
                     <p class="lead mb-5">Software engineering student aspiring towards full-stack app development, with a focus on the backend.</p>
@@ -101,7 +101,7 @@
                                     <li>Group project (3 group members) for Web Development module at Wintec.</li>
                                     <li>HTML, CSS and vanilla JS to build a Computer repair business website from scratch.</li>
                                     <li>We used Git and GitHub to collaborate and keep our code up to date.</li>
-                                    <li>Azure DevOps was used to keep track of user stories and assign tasks</li>
+                                    <li>Azure DevOps was used to keep track of user stories and assign tasks.</li>
                                 </ul>
                                 <a href="https://jtrondy.github.io/Assignment_2/" target="_blank">View website here - Computer Repair</a><br>
                                 <a href="https://github.com/jtrondy/Assignment_2/" target="_blank">View GitHub repo here - Computer Repair</a>
