--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <p class="lead mb-5">Software engineering student aspiring towards full-stack app development, with a focus on the backend.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/jared-stevenson-nz/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://github.com/jtrondy/" target="_blank"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://github.com/village1680/" target="_blank"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://www.canva.com/design/DAFOt6z_S3M/ZCVonQKN3DnvSw0Vj6ZTiQ/view?utm_content=DAFOt6z_S3M&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank"><i class="fa fa-file-text"></i></a>
                     </div>
                 </div>
@@ -103,8 +103,8 @@
                                     <li>We used Git and GitHub to collaborate and keep our code up to date.</li>
                                     <li>Azure DevOps was used to keep track of user stories and assign tasks.</li>
                                 </ul>
-                                <a href="https://jtrondy.github.io/Assignment_2/" target="_blank">View website here - Computer Repair</a><br>
-                                <a href="https://github.com/jtrondy/Assignment_2/" target="_blank">View GitHub repo here - Computer Repair</a>
+                                <a href="https://village1680.github.io/Assignment_2/" target="_blank">View website here - Computer Repair</a><br>
+                                <a href="https://github.com/village1680/Assignment_2/" target="_blank">View GitHub repo here - Computer Repair</a>
                             </div>
                         </div>
                         <div class="flex-shrink-0">
@@ -139,7 +139,7 @@
                                     <li>The intention of this assignment was to demonstrate the OOP principles Inheritance and Polymorphism.</li>
                                     <li>The other objective was to introduce Hash tables and key value pairs.</li>
                                 </ul>
-                                <a href="https://github.com/jtrondy/hash-table" target="_blank">View GitHub repo here - Livestock profitability</a>
+                                <a href="https://github.com/village1680/hash-table" target="_blank">View GitHub repo here - Livestock profitability</a>
                             </div>
                         </div>
                         <div class="flex-shrink-0">
@@ -157,7 +157,7 @@
                                     <li>Compares the execution time between a single thread and n threads</li>
                                     <li>The multithread function takes in a single array, splits it into n arrays, starts the threads, and then finds the maximum number.</li>
                                 </ul>
-                                <a href="https://github.com/jtrondy/multithreaded-consoleapp" target="_blank">View GitHub repo here - multithread app</a>
+                                <a href="https://github.com/village1680/multithreaded-consoleapp" target="_blank">View GitHub repo here - multithread app</a>
                             </div>
                         </div>
                         <div class="flex-shrink-0">
