updated canva link

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/jared-stevenson-nz/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/village1680/" target="_blank"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="https://www.canva.com/design/DAFOt6z_S3M/ZCVonQKN3DnvSw0Vj6ZTiQ/view?utm_content=DAFOt6z_S3M&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank"><i class="fa fa-file-text"></i></a>
+                        <a class="social-icon" href="https://www.canva.com/design/DAFPk-9NsGM/8Xj4IDVGhBtIgXy_WMaUaQ/view?utm_content=DAFPk-9NsGM&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank"><i class="fa fa-file-text"></i></a>
                     </div>
                 </div>
             </section>
