updated farm app to comprehensive application

--- a/index.html
+++ b/index.html
@@ -131,20 +131,21 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Livestock daily profitability calculator</h3>
+                            <h3 class="mb-0">Comprehensive farm application</h3>
                             <div class="subheading mb-3">Wintec - comp609 - Application Development</div>
                             <div>
                                 <ul>
                                     <li>Windows forms C#/.Net6.0 desktop application which calculates the total profitability of livestock per day.</li>
-                                    <li>The intention of this assignment was to demonstrate the OOP principles Inheritance and Polymorphism.</li>
-                                    <li>The other objective was to introduce Hash tables and key value pairs.</li>
+                                    <li>Develop a GUI application that retrieves the data from
+                                        the database, stores it in efficient data structures, manipulates it and reports useful information
+                                        related to the profitability of the farm.</li>
                                 </ul>
-                                <a href="https://github.com/village1680/hash-table" target="_blank">View GitHub repo here - Livestock profitability</a>
+                                <a href="https://github.com/Village1680/COMP609-Comprehensive_Application" target="_blank">View GitHub repo here - Comprehensive Farm Application</a>
                             </div>
                         </div>
                         <div class="flex-shrink-0">
                             <span class="text-primary">Semester 2 - 2022</span><br>
-                            <img class="portfolio-img" src="assets/img/profit_calculator-comp609.png" onclick="window.open(this.src)" alt="view of profitability app after performing calculation">
+                            <img class="portfolio-img" src="assets/img/farm_app.png" onclick="window.open(this.src)" alt="view of profitability app after performing calculation">
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
