updated farm app to comprehensive application

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                             <div class="subheading mb-3">Wintec - comp609 - Application Development</div>
                             <div>
                                 <ul>
-                                    <li>Windows forms C#/.Net6.0 desktop application which calculates the total profitability of livestock per day.</li>
-                                    <li>Develop a GUI application that retrieves the data from
+                                    <li>Windows forms C#/.Net6.0 desktop application.</li>
+                                    <li>Retrieves the data from
                                         the database, stores it in efficient data structures, manipulates it and reports useful information
                                         related to the profitability of the farm.</li>
                                 </ul>
