--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         Hamilton, New Zealand ·
                         <a href="mailto:name@email.com">jarste22@student.wintec.ac.nz</a>
                     </div>
-                    <p class="lead mb-5">Software engineering student aspiring towards full-stack app development, with a focus on the backend.</p>
+                    <p class="lead mb-5">Software engineering student aspiring towards full-stack app development.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/jared-stevenson-nz/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/village1680/" target="_blank"><i class="fab fa-github"></i></a>
