removed github links

--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Waikato Institute of Technology (Wintec)</h3>
-                            <div class="subheading mb-3">Bachelor of Applied Information Technology (Level 7)</div>
-                            <div>Software Engineering Specialisation</div>
+                            <div class="subheading mb-0">Bachelor of Applied Information Technology (Level 7)</div><p>Software Engineering Specialisation</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">February 2022 - November 2023 (Expected Graduation)</span></div>
                     </div>
@@ -103,7 +102,6 @@
                                         the database, stores it in efficient data structures, manipulates it and reports useful information
                                         related to the profitability of the farm.</li>
                                 </ul>
-                                <a href="https://github.com/Village1680/COMP609-Comprehensive_Application" target="_blank">View GitHub repo here - Comprehensive Farm Application</a>
                             </div>
                         </div>
                         <div class="flex-shrink-0">
@@ -121,7 +119,6 @@
                                     <li>Compares the execution time between a single thread and n threads</li>
                                     <li>The multithread function takes in a single array, splits it into n arrays, starts the threads, and then finds the maximum number.</li>
                                 </ul>
-                                <a href="https://github.com/village1680/multithreaded-consoleapp" target="_blank">View GitHub repo here - multithread app</a>
                             </div>
                         </div>
                         <div class="flex-shrink-0">
@@ -141,7 +138,6 @@
                                     <li>Azure DevOps was used to keep track of user stories and assign tasks.</li>
                                 </ul>
                                 <a href="https://village1680.github.io/Assignment_2/" target="_blank">View website here - Computer Repair</a><br>
-                                <a href="https://github.com/village1680/Assignment_2/" target="_blank">View GitHub repo here - Computer Repair</a>
                             </div>
                         </div>
                         <div class="flex-shrink-0">
