--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
                                     <li>The multithread function takes in a single array, splits it into n arrays, starts the threads, and then finds the maximum number.</li>
                                 </ul>
                             </div>
+                            <button type="button" class="collapsible">View code here</button>
+                            <div class="content">
+                                <script src="https://gist.github.com/Village1680/2ec73b478ea40f5518a856901d454085.js"></script>
+                            </div>
                         </div>
                         <div class="flex-shrink-0">
                             <span class="text-primary">Semester 2 - 2022</span><br>
@@ -175,7 +179,6 @@
                         <li class="list-inline-item"><i class="devicon-git-plain colored"></i></li>
                         <li class="list-inline-item"><i class="devicon-html5-plain colored"></i></li>
                         <li class="list-inline-item"><i class="devicon-css3-plain colored"></i></li>
-                        <li class="list-inline-item"><i class="devicon-python-plain colored"></i></li>
                         <li class="list-inline-item"><i class="devicon-bash-plain colored"></i></li>
                         <li class="list-inline-item"><i class="devicon-oracle-original colored"></i></li>
                         <li class="list-inline-item"><i class="devicon-visualstudio-plain colored"></i></li>
@@ -264,5 +267,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <!-- Collapsible buttons -->
+        <script src="js/collapse.js"></script>
     </body>
 </html>
