hover on buttons more obvious

--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
                                         related to the profitability of the farm.</li>
                                 </ul>
                             </div>
+                                <button type="button" class="code-buttons" onclick="window.open('https://github.com/Village1680/COMP609-Comprehensive_Application', '_blank');">View Repo here</button>
+                                <button type="button" class="collapsible code-buttons">View embed here</button>
+                            <div class="content">
+                                <script src="https://gist.github.com/Village1680/1f176980a31bdd21443416f99462e091.js"></script>
+                            </div>
                         </div>
                         <div class="flex-shrink-0">
                             <span class="text-primary">Semester 2 - 2022</span><br>
@@ -119,9 +124,9 @@
                                     <li>The multithread function takes in a single array, splits it into n arrays, starts the threads, and then finds the maximum number.</li>
                                 </ul>
                             </div>
-                            <button type="button" class="collapsible">View code here</button>
+                            <button type="button" class="collapsible code-buttons">View embed here</button>
                             <div class="content">
-                                <script src="https://gist.github.com/Village1680/2ec73b478ea40f5518a856901d454085.js"></script>
+                                <script src="https://gist.github.com/Village1680/9a693c1d55b02f2b46a48f247342ed2c.js"></script>
                             </div>
                         </div>
                         <div class="flex-shrink-0">
@@ -140,7 +145,7 @@
                                     <li>We used Git and GitHub to collaborate and keep our code up to date.</li>
                                     <li>Azure DevOps was used to keep track of user stories and assign tasks.</li>
                                 </ul>
-                                <a href="https://village1680.github.io/Assignment_2/" target="_blank">View website here - Computer Repair</a><br>
+                                    <button type="button" class="code-buttons" onclick="window.open('https://village1680.github.io/Assignment_2/', '_blank');">View Website</button>
                             </div>
                         </div>
                         <div class="flex-shrink-0">
