adjusted max-width of portfolio list items

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                             <h3 class="mb-0">Comprehensive farm application</h3>
                             <div class="subheading mb-3">Wintec - comp609 - Application Development</div>
                             <div>
-                                <ul>
+                                <ul class="ul-description">
                                     <li>Windows forms C#/.Net6.0 desktop application.</li>
                                     <li>Retrieves the data from
                                         the database, stores it in efficient data structures, manipulates it and reports useful information
@@ -118,7 +118,7 @@
                             <h3 class="mb-0">Multithreading in C#</h3>
                             <div class="subheading mb-3">Wintec - Comp609 - Application Development</div>
                             <div>
-                                <ul>
+                                <ul class="ul-description">
                                     <li>Console app which finds the maximum number of a large integer array.</li>
                                     <li>Compares the execution time between a single thread and n threads</li>
                                     <li>The multithread function takes in a single array, splits it into n arrays, starts the threads, and then finds the maximum number.</li>
@@ -139,7 +139,7 @@
                             <h3 class="mb-0">Computer repair website</h3>
                             <div class="subheading mb-3">Wintec - COMP602 - Web Development</div>
                             <div>
-                                <ul>
+                                <ul class="ul-description">
                                     <li>Group project (3 group members) for Web Development module at Wintec.</li>
                                     <li>HTML, CSS and vanilla JS to build a Computer repair business website from scratch.</li>
                                     <li>We used Git and GitHub to collaborate and keep our code up to date.</li>
@@ -158,7 +158,7 @@
                             <h3 class="mb-0">Quicksort Animation</h3>
                             <div class="subheading mb-3">Wintec - COMP605 - Datastructures and Algorithms</div>
                             <div>
-                                <ul>
+                                <ul class="ul-description">
                                     <li>Powerpoint animation displaying the partitioning process of the quicksort algorithm.</li>
                                     <li>In this particular case I am always selecting the first element as the pivot.</li>
                                     <li><a href="./assets/img/quicksort.gif" target="_blank">Click here</a> to zoom in.</li>
