--- a/index.html
+++ b/index.html
@@ -264,6 +264,10 @@
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             NDG Linux Unhatched - September 2021
                         </li>
+                        <br>
+                        <li>
+                            <div data-iframe-width="275" data-iframe-height="270" data-share-badge-id="b859edea-7612-4538-8232-0c18d1e84126" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+                        </li>
                     </ul>
                 </div>
             </section>
