@mailto: email address fix

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         Hamilton, New Zealand ·
-                        <a href="mailto:name@email.com">jarste22@student.wintec.ac.nz</a>
+                        <a href="mailto:jarste22@student.wintec.ac.nz">jarste22@student.wintec.ac.nz</a>
                     </div>
                     <p class="lead mb-5">Software engineering student aspiring towards full-stack app development.</p>
                     <div class="social-icons">
