--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="Personal Portfolio, resume, experience, education and projects" />
         <meta name="author" content="Jared Stevenson" />
+        <meta http-equiv="Content-Type" content="text/html">
         <title>Jared Stevenson</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -48,7 +49,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         Hamilton, New Zealand ·
-                        <a href="mailto:jarste22@student.wintec.ac.nz">jarste22@student.wintec.ac.nz</a>
+                        <a href="mailto:jarste22@student.wintec.ac.nz">Email me</a>
                     </div>
                     <p class="lead mb-5">Software engineering student aspiring towards full-stack app development.</p>
                     <div class="social-icons">
