update MIME header

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="Personal Portfolio, resume, experience, education and projects" />
         <meta name="author" content="Jared Stevenson" />
+        <meta content="text/html"/>
         <title>Jared Stevenson</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
