--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <link href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css" rel="stylesheet">
     </head>
     <body id="page-top">
+    <a href="mailto:jarste22@student.wintec.ac.nz">Email me</a>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
