--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         <link href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css" rel="stylesheet">
     </head>
     <body id="page-top">
-    <a href="mailto:jarste22@student.wintec.ac.nz">Email me</a>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
@@ -50,7 +49,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         Hamilton, New Zealand ·
-                        <a href="mailto:jarste22@student.wintec.ac.nz">Email me</a>
+                        <a href="mailto:jared@jaredstevenson.engineer">Email me</a>
                     </div>
                     <p class="lead mb-5">Software engineering student aspiring towards full-stack app development.</p>
                     <div class="social-icons">
