--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         Hamilton, New Zealand ·
-                        <a href="mailto:jared@jaredstevenson.engineer">Email me</a>
+                        <a href="mailto:jared@jaredstevenson.com">Email me</a>
                     </div>
                     <p class="lead mb-5">Software engineering student aspiring towards full-stack app development.</p>
                     <div class="social-icons">
