zoom on hover, not very responsive

--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
                         </div>
                         <div class="flex-shrink-0">
                             <span class="text-primary">Semester 2 - 2022</span><br>
-                            <img class="portfolio-img" src="assets/img/farm_app.png" onclick="window.open(this.src)" alt="view of profitability app after performing calculation">
+                            <div class="zoom-on-hover">
+                                <img class="portfolio-img" src="assets/img/farm_app.png" onclick="window.open(this.src)" alt="view of profitability app after performing calculation">
+                            </div>
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -132,7 +134,9 @@
                         </div>
                         <div class="flex-shrink-0">
                             <span class="text-primary">Semester 2 - 2022</span><br>
+                            <div class="zoom-on-hover">
                             <img class="portfolio-img" src="assets/img/multithreading-comp609.png" onclick="window.open(this.src)" alt="console image of execution times for multithreading app">
+                            </div>
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -151,7 +155,9 @@
                         </div>
                         <div class="flex-shrink-0">
                             <span class="text-primary">Semester 1 - 2022</span><br>
-                            <img class="portfolio-img" src="assets/img/assignment_2-web_dev-home_page.jpeg" onclick="window.open(this.src)" alt="Home page for computer repair website">
+                            <div class="zoom-on-hover">
+                                <img class="portfolio-img" src="assets/img/assignment_2-web_dev-home_page.jpeg" onclick="window.open(this.src)" alt="Home page for computer repair website">
+                            </div>
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
@@ -168,7 +174,9 @@
                         </div>
                         <div class="flex-shrink-0">
                             <span class="text-primary">Semester 2 - 2022</span><br>
+                            <div class="zoom-on-hover">
                             <img class="portfolio-img" src="assets/img/quicksort.gif" onclick="window.open(this.src)" alt="Home page for computer repair website">
+                            </div>
                         </div>
                     </div>
                 </div>
