back to top button

--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@
                 </div>
             </section>
         </div>
+        <a href="#page-top" class="back-to-top bg-primary d-flex align-items-center justify-content-center"><i class="fa-solid fa-arrow-up"></i></a>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
