Updated dates and header

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         Hamilton, New Zealand ·
                         <a href="mailto:jared@jaredstevenson.com">Email me</a>
                     </div>
-                    <p class="lead mb-5">Software engineering student aspiring towards full-stack app development.</p>
+                    <p class="lead mb-5">Recent Software Engineering Graduate | Eagar to contribute to diverse software projects.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/jared-stevenson-nz/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/village1680/" target="_blank"><i class="fab fa-github"></i></a>
@@ -68,7 +68,7 @@
                             <h3 class="mb-0">Waikato Institute of Technology (Wintec)</h3>
                             <div class="subheading mb-0">Bachelor of Applied Information Technology (Level 7)</div><p>Software Engineering Specialisation</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">February 2022 - November 2023 (Expected Graduation)</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">February 2022 - November 2023 (Expected Graduation May 2024)</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
