updated experiences information services

--- a/index.html
+++ b/index.html
@@ -216,6 +216,21 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Information Services Architecture Intern</h3>
+                            <div class="subheading mb-3">Hamilton City Council</div>
+                            <ul>
+                                <li>Requirements Gathering and Analysis</li>
+                                <li>Conducting stakeholder interviews</li>
+                                <li>Coordination with wider organisation to plan and execute user testing session</li>
+                                <li>UX/UI Design and Prototyping</li>
+                                <li>Git and .NET Maui</li>
+                                <li>Problem solving</li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 2023 - November 2023</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Commercial Painter</h3>
                             <div class="subheading mb-3">Programmed Property Services</div>
                             <ul>
